--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -36,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://KJW-623.github.io/YOURCAST/"
+    "homepage": "https://KJW-623.github.io/YOURCAST/"
 }
