--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "YOURCAST",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://KJW-623.github.io/YOURCAST/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.4",
@@ -39,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-    "homepage": "https://KJW-623.github.io/YOURCAST/"
+  }
 }
